--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bar": "^0.1.2",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "loading": "^1.13.3",
     "mongoose": "^8.7.1",
     "next": "14.2.15",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
-    "react-toastify": "^10.0.6"
+    "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.6",
+    "top": "^0.2.3"
   },
   "devDependencies": {
     "eslint": "^8",
