--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.6",
+    "react-top-loading-bar": "^2.3.1",
     "top": "^0.2.3"
   },
   "devDependencies": {
