--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "jwt-decode": "^4.0.0",
     "loading": "^1.13.3",
     "mongoose": "^8.7.1",
-    "next": "14.2.15",
-    "react": "^18.3.1",
-    "react-dom": "^18",
+    "next": "^15.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.3.0",
     "react-loading-icons": "^1.1.0",
     "react-toastify": "^10.0.6",
